--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -119,5 +119,5 @@
   "pli-tv-bu-pm:39.0": "",
   "pli-tv-bu-pm:39.1": "If a monk asks an unrelated male or female householder for a robe, except on an appropriate occasion, he commits an offense entailing relinquishment and confession. [See essay on cīvara.]",
   "pli-tv-bu-pm:39.2": "These are the appropriate occasions: his robes are stolen or his robes are lost.",
-  "pli-tv-bu-pm:40.1": "If an unrelated male or female householder invites that monk to take many robes, he should accept at most one sarong and one upper robe. If he accepts more than that, "
+  "pli-tv-bu-pm:40.1": "If an unrelated male or female householder invites that monk to take many robes, he should accept at most one sarong and one upper robe. "
 }
