--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -132,5 +132,6 @@
   "pli-tv-bu-pm:42.4": "'It would be good if you would put these separate robe funds together to buy such-and-such robe-cloth and then give it to me,'",
   "pli-tv-bu-pm:42.5": "and he does so because he wants something fine, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:43.1": "If a king, a king’s employee, a brahmin, or a householder sends a robe fund for a monk by messenger, saying,",
-  "pli-tv-bu-pm:43.2": "'Buy robe-cloth with this robe fund and give it to monk so-and-so,'\n"
+  "pli-tv-bu-pm:43.2": "'Buy robe-cloth with this robe fund and give it to monk so-and-so,'\n",
+  "pli-tv-bu-pm:43.3": "and the messenger goes to that monk and says,\n"
 }
