--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -137,5 +137,6 @@
   "pli-tv-bu-pm:43.4": "'Venerable, I have brought a robe fund for you. Please receive it,'",
   "pli-tv-bu-pm:43.5": "then that monk should reply,",
   "pli-tv-bu-pm:43.6": "‘We don’t receive robe funds, but we do receive allowable robe-cloth at the right time.’\n",
-  "pli-tv-bu-pm:43.7": "If that messenger says,\n"
+  "pli-tv-bu-pm:43.7": "If that messenger says,\n",
+  "pli-tv-bu-pm:43.8": "'Is there anyone who provides services for you?'\n"
 }
