--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -141,5 +141,6 @@
   "pli-tv-bu-pm:43.8": "'Is there anyone who provides services for you?'\n",
   "pli-tv-bu-pm:43.9": "the monk, if he needs robe-cloth, should point out a monastery worker or a lay follower and say,\n",
   "pli-tv-bu-pm:43.10": "'He provides services for the monks.'",
-  "pli-tv-bu-pm:43.11": "If the messenger instructs that service-provider and then returns to the monk and says,\n"
+  "pli-tv-bu-pm:43.11": "If the messenger instructs that service-provider and then returns to the monk and says,\n",
+  "pli-tv-bu-pm:43.12": "'Venerable, I have instructed the service-provider you pointed out. Please go to him at the right time and he’ll give you robe-cloth,'"
 }
