--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -144,5 +144,6 @@
   "pli-tv-bu-pm:43.11": "If the messenger instructs that service-provider and then returns to the monk and says,\n",
   "pli-tv-bu-pm:43.12": "'Venerable, I have instructed the service-provider you pointed out. Please go to him at the right time and he’ll give you robe-cloth,'",
   "pli-tv-bu-pm:43.13": "then, if that monk needs robe-cloth, he should go to that service-provider and prompt him and remind him two or three times, saying,",
-  "pli-tv-bu-pm:43.14": "“I need robe-cloth.'"
+  "pli-tv-bu-pm:43.14": "“I need robe-cloth.'",
+  "pli-tv-bu-pm:43.15": "If he then gets robe-cloth, all is well.\n"
 }
