--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -152,5 +152,6 @@
   "pli-tv-bu-pm:43.19": "If he does not get robe-cloth, he should go to the owners of that robe fund, or send a message, saying,\n",
   "pli-tv-bu-pm:43.20": "'That monk hasn’t received any benefit from the robe fund you sent for him.\n",
   "pli-tv-bu-pm:43.21": "Please recover what’s yours, or it might perish.'",
-  "pli-tv-bu-pm:43.22": "This is the proper procedure."
+  "pli-tv-bu-pm:43.22": "This is the proper procedure.",
+  "pli-tv-bu-pm:43.23": "THE FIRST SUB-CHAPTER ON THE ROBE SEASON IS FINISHED."
 }
