--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -154,5 +154,6 @@
   "pli-tv-bu-pm:43.21": "Please recover what’s yours, or it might perish.'",
   "pli-tv-bu-pm:43.22": "This is the proper procedure.",
   "pli-tv-bu-pm:43.23": "THE FIRST SUB-CHAPTER ON THE ROBE SEASON IS FINISHED.",
-  "pli-tv-bu-pm:44.1": "If a monk has a blanket made that contains silk, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:44.1": "If a monk has a blanket made that contains silk, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:45.1": "If a monk has a blanket made entirely of black wool, he commits an offense entailing relinquishment and confession."
 }
