--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -155,5 +155,6 @@
   "pli-tv-bu-pm:43.22": "This is the proper procedure.",
   "pli-tv-bu-pm:43.23": "THE FIRST SUB-CHAPTER ON THE ROBE SEASON IS FINISHED.",
   "pli-tv-bu-pm:44.1": "If a monk has a blanket made that contains silk, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:45.1": "If a monk has a blanket made entirely of black wool, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:45.1": "If a monk has a blanket made entirely of black wool, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:46.1": "If a monk is having a new blanket made, he should use two parts of entirely black wool, a third part of white, and a fourth part of brown."
 }
