--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -157,5 +157,6 @@
   "pli-tv-bu-pm:44.1": "If a monk has a blanket made that contains silk, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:45.1": "If a monk has a blanket made entirely of black wool, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:46.1": "If a monk is having a new blanket made, he should use two parts of entirely black wool, a third part of white, and a fourth part of brown.",
-  "pli-tv-bu-pm:46.2": "If he has a new blanket made without using two parts of entirely black wool, a third part of white, and a fourth part of brown, he commits an offense entailing relinquishment and confession.’”\n"
+  "pli-tv-bu-pm:46.2": "If he has a new blanket made without using two parts of entirely black wool, a third part of white, and a fourth part of brown, he commits an offense entailing relinquishment and confession.’”\n",
+  "pli-tv-bu-pm:47.1": "If a monk has had a new blanket made, he should keep it for six years.\n"
 }
