--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -167,5 +167,6 @@
   "pli-tv-bu-pm:49.3": "If he carries it further than that, even if there is no one else to carry it, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:50.1": "If a monk has an unrelated nun wash, dye, or comb wool, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:51.1": "If a monk takes, has someone else take, or consents to gold and silver being deposited for him, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:52.1": "If a monk trades with money in various ways, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:52.1": "If a monk trades with money in various ways, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:53.1": "If a monk barters in various ways, he commits an offense entailing relinquishment and confession.’"
 }
