--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -169,5 +169,6 @@
   "pli-tv-bu-pm:51.1": "If a monk takes, has someone else take, or consents to gold and silver being deposited for him, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:52.1": "If a monk trades with money in various ways, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:53.1": "If a monk barters in various ways, he commits an offense entailing relinquishment and confession.’",
-  "pli-tv-bu-pm:53.2": "THE SECOND SUB-CHAPTER ON SILK IS FINISHED.\n"
+  "pli-tv-bu-pm:53.2": "THE SECOND SUB-CHAPTER ON SILK IS FINISHED.\n",
+  "pli-tv-bu-pm:54.0.2": "A monk should keep an extra almsbowl for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession."
 }
