--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -172,5 +172,6 @@
   "pli-tv-bu-pm:53.2": "THE SECOND SUB-CHAPTER ON SILK IS FINISHED.\n",
   "pli-tv-bu-pm:54.0.2": "",
   "pli-tv-bu-pm:54.1": "A monk should keep an extra almsbowl for ten days at the most. If he keeps it longer than that, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:55.1": "‘If a monk exchanges an almsbowl with fewer than five mends for a new almsbowl, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:55.1": "‘If a monk exchanges an almsbowl with fewer than five mends for a new almsbowl, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:55.2": "That monk should relinquish that almsbowl to a gathering of monks.\n"
 }
