--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -177,5 +177,6 @@
   "pli-tv-bu-pm:55.3": "He should then be given the last almsbowl belonging to that gathering: 'Monk, this bowl is yours. Keep it until it breaks.'\n",
   "pli-tv-bu-pm:55.4": "This is the proper procedure.",
   "pli-tv-bu-pm:56.1": "After being received, the tonics allowable for sick monks—that is, ghee, butter, oil, honey, and syrup—should be used from storage for at most seven days.",
-  "pli-tv-bu-pm:56.2": "If one uses them longer than that, one commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:56.2": "If one uses them longer than that, one commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:57.1": "When there is a month left of the hot season, a monk may go looking for cloth for his rainy-season robe. When there is a half-month left, he may sew it and then wear it."
 }
