--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -178,5 +178,6 @@
   "pli-tv-bu-pm:55.4": "This is the proper procedure.",
   "pli-tv-bu-pm:56.1": "After being received, the tonics allowable for sick monks—that is, ghee, butter, oil, honey, and syrup—should be used from storage for at most seven days.",
   "pli-tv-bu-pm:56.2": "If one uses them longer than that, one commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:57.1": "When there is a month left of the hot season, a monk may go looking for cloth for his rainy-season robe. When there is a half-month left, he may sew it and then wear it."
+  "pli-tv-bu-pm:57.1": "When there is a month left of the hot season, a monk may go looking for cloth for his rainy-season robe. When there is a half-month left, he may sew it and then wear it.",
+  "pli-tv-bu-pm:57.2": "If he goes looking for cloth for his rainy-season robe when there is more than a month left of the hot season, or if he sews it and then wears it when there is more than a half-month left, he commits an offense entailing relinquishment and confession."
 }
