--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -185,5 +185,6 @@
   "pli-tv-bu-pm:60.1": "If a male or female householder is having robe-cloth woven by weavers for an unrelated monk and, without first being invited, that monk goes to those weavers and specifies the kind of robe-cloth he wants, saying,",
   "pli-tv-bu-pm:60.2": "'This robe-cloth that you are weaving for me, make it long and wide; make it closely woven, well-woven, well-stretched, well-scraped, and well-combed,",
   "pli-tv-bu-pm:60.3": "and perhaps I will even give you a small gift,’",
-  "pli-tv-bu-pm:60.4": "then, in saying that and afterwards giving them a small gift, even a bit of almsfood, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:60.4": "then, in saying that and afterwards giving them a small gift, even a bit of almsfood, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:61.1": "When there are ten days left to the Kattika full moon that ends the first rainy-season residence and haste-cloth is given to a monk, he may receive it if he regards it as urgent. He may then store it until the end of the robe season."
 }
