--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -190,5 +190,6 @@
   "pli-tv-bu-pm:61.2": "If he stores it beyond that, he commits an offense entailing relinquishment and confession.",
   "pli-tv-bu-pm:62.1": "There are wilderness dwellings that are considered risky and dangerous. After observing the Kattika full moon that ends the rainy season, a monk who is staying in such a dwelling may, if he so desires, store one of his three robes in an inhabited area so long as he has a reason for staying apart from that robe.",
   "pli-tv-bu-pm:62.2": "He should stay apart from that robe for six days at the most. If he stays apart from it longer than that, except if the monks have agreed, he commits an offense entailing relinquishment and confession.",
-  "pli-tv-bu-pm:63.1": "If a monk diverts to himself material support that he knows was intended for the Sangha, he commits an offense entailing relinquishment and confession."
+  "pli-tv-bu-pm:63.1": "If a monk diverts to himself material support that he knows was intended for the Sangha, he commits an offense entailing relinquishment and confession.",
+  "pli-tv-bu-pm:63.2": "THE CHAPTER ON OFFENSES ENTAILING RELINQUISHMENT IS FINISHED.\n"
 }
