--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -196,5 +196,6 @@
   "pli-tv-bu-pm:64.2": "In regard to this I ask you, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:64.3": "A second time I ask, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:64.4": "A third time I ask, ‘Are you pure in this?’ ",
-  "pli-tv-bu-pm:64.5": "You are pure in this and therefore silent. I will remember it thus."
+  "pli-tv-bu-pm:64.5": "You are pure in this and therefore silent. I will remember it thus.",
+  "pli-tv-bu-pm:64.6": "The offenses entailing relinquishment and confession are finished. "
 }
