--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -1,5 +1,6 @@
 {
   "pli-tv-bu-pm:5.1": "Please, Venerables, I ask the Sangha to listen.",
+  "pli-tv-bu-pm:5.2": "If it seems appropriate to the Sangha, it should do the observance-day ceremony, it should recite the Monastic Code.",
   "pli-tv-bu-pm:9.0": "Expulsion 1. Sexual Intercourse",
   "pli-tv-bu-pm:9.1": "If a monk, after taking on the monks’ training and way of life, without first renouncing the training and revealing his weakness, has sexual intercourse, even with a female animal, he is expelled and excluded from the community.",
   "pli-tv-bu-pm:10.0": "Expulsion 2. Stealing",
