--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -4,6 +4,7 @@
   "pli-tv-bu-pm:5.3": "What is the preliminary duty of the Sangha?\n",
   "pli-tv-bu-pm:6.1": "The venerables should declare their purity.\n",
   "pli-tv-bu-pm:6.2": "I will recite the Monastic Code.\n",
+  "pli-tv-bu-pm:6.3": "Everyone present should listen to it and attend carefully.\n",
   "pli-tv-bu-pm:9.0": "Expulsion 1. Sexual Intercourse",
   "pli-tv-bu-pm:9.1": "If a monk, after taking on the monks’ training and way of life, without first renouncing the training and revealing his weakness, has sexual intercourse, even with a female animal, he is expelled and excluded from the community.",
   "pli-tv-bu-pm:10.0": "Expulsion 2. Stealing",
