--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -8,6 +8,7 @@
   "pli-tv-bu-pm:6.4": "Anyone who has committed an offense should reveal it.\n",
   "pli-tv-bu-pm:6.5": "If you haven’t committed any offense, you should remain silent.\n",
   "pli-tv-bu-pm:6.6": "If you are silent, I will regard you as pure.\n",
+  "pli-tv-bu-pm:6.7": "Just as one responds when asked individually, so too, an announcement is made three times in this kind of gathering.\n",
   "pli-tv-bu-pm:9.0": "Expulsion 1. Sexual Intercourse",
   "pli-tv-bu-pm:9.1": "If a monk, after taking on the monks’ training and way of life, without first renouncing the training and revealing his weakness, has sexual intercourse, even with a female animal, he is expelled and excluded from the community.",
   "pli-tv-bu-pm:10.0": "Expulsion 2. Stealing",
