--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -10,7 +10,7 @@
   "pli-tv-bu-pm:6.6": "If you are silent, I will regard you as pure.\n",
   "pli-tv-bu-pm:6.7": "Just as one responds when asked individually, so too, an announcement is made three times in this kind of gathering.\n",
   "pli-tv-bu-pm:6.8": "If a monk remembers an offense while the announcement is being made up to the third time, but doesn’t reveal it, he is lying in full awareness.\n",
-  "pli-tv-bu-pm:6.9": "Lying in full awareness is called an obstacle by the Buddha.\n",
+  "pli-tv-bu-pm:6.9": "If a monk remembers an offense while the announcement is being made up to the third time, but doesn’t reveal it, he is lying in full awareness.\n",
   "pli-tv-bu-pm:6.10": "A monk who remembers an offense and is seeking purification should therefore reveal it.\n",
   "pli-tv-bu-pm:6.11": "When it’s revealed, he will be at ease.",
   "pli-tv-bu-pm:9.0": "Expulsion 1. Sexual Intercourse",
