--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -4,7 +4,7 @@
   "pli-tv-bu-pm:5.3": "What is the preliminary duty of the Sangha?\n",
   "pli-tv-bu-pm:6.1": "The venerables should declare their purity.\n",
   "pli-tv-bu-pm:6.2": "I will recite the Monastic Code.\n",
-  "pli-tv-bu-pm:6.3": "Everyone present should listen to it and attend carefully.\n",
+  "pli-tv-bu-pm:6.3": "I will recite the Monastic Code.\n",
   "pli-tv-bu-pm:6.4": "Everyone present should listen to it and attend carefully.\n",
   "pli-tv-bu-pm:6.5": "Anyone who has committed an offense should reveal it.\n",
   "pli-tv-bu-pm:6.6": "If you haven’t committed any offense, you should remain silent.\n",
