--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -1,7 +1,7 @@
 {
   "pli-tv-bu-pm:5.1": "Please, Venerables, I ask the Sangha to listen.",
   "pli-tv-bu-pm:5.2": "If it seems appropriate to the Sangha, it should do the observance-day ceremony, it should recite the Monastic Code.",
-  "pli-tv-bu-pm:5.3": "What is the preliminary duty of the Sangha?\n",
+  "pli-tv-bu-pm:5.3": "If it seems appropriate to the Sangha, it should do the observance-day ceremony, it should recite the Monastic Code.",
   "pli-tv-bu-pm:6.1": "What is the preliminary duty of the Sangha?\n",
   "pli-tv-bu-pm:6.2": "The venerables should declare their purity.\n",
   "pli-tv-bu-pm:6.3": "I will recite the Monastic Code.\n",
