--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -95,5 +95,6 @@
   "mn93:11.14": "Denn jedes Feuer hat Flammen, eine Farbe und einen Glanz und ist als Feuer zu gebrauchen.“ ",
   "mn93:11.15": "„Was ist dann die Quelle für das Selbstvertrauen und den Nachdruck der Brahmanen in dieser Sache, dass sie diese Behauptung aufstellen?“ ",
   "mn93:12.1": "„Auch wenn der Asket Gotama das sagt, so bleiben die Brahmanen doch bei ihrem Glauben.“ ",
-  "mn93:12.4": "„Was denkst du, Assalāyana? "
+  "mn93:12.4": "„Was denkst du, Assalāyana? ",
+  "mn93:12.5": "Da würde ein adliger Junge mit einem Brahmanenmädchen schlafen und sie bekämen ein Kind. "
 }
