--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -99,5 +99,6 @@
   "mn93:12.5": "Da würde ein adliger Junge mit einem Brahmanenmädchen schlafen und sie bekämen ein Kind. ",
   "mn93:12.6": "Würde man das Kind nach dem Vater als Adligen oder nach der Mutter als Brahmanen bezeichnen?“ ",
   "mn93:12.7": "„Sowohl die eine als auch die andere Bezeichnung wäre möglich.“ ",
-  "mn93:13.1": "„Was denkst du, Assalāyana? "
+  "mn93:13.1": "„Was denkst du, Assalāyana? ",
+  "mn93:13.2": "Da würde ein Brahmanenjunge mit einem adligen Mädchen schlafen und sie bekämen ein Kind. "
 }
