--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -413,5 +413,6 @@
   "dn16:2.16.8": "„Ah, izigrala nas je ova javna žena, porazila nas je ova javna žena!”",
   "dn16:2.16.9": "Potom produžiše ka Ambapālinom gaju.",
   "dn16:2.17.1": "I Blaženi ih vide još iz daleka kako dolaze, ",
-  "dn16:2.17.2": "pa reče monasima:"
+  "dn16:2.17.2": "pa reče monasima:",
+  "dn16:2.17.3": "„Monasi, oni koji nikada ranije nisu videli božanstva neba trideset trojice, neka dobro zagledaju ovu grupu Liććhavīja,"
 }
