--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -609,5 +609,6 @@
   "dn16:3.29.3": "Na isti način neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, plave, plave boje, plave spoljašnjosti, plavog sjaja. I zaključuje ovako:",
   "dn16:3.29.4": "„Ovladavši njima, ja znam, ja vidim.”",
   "dn16:3.29.5": "To je peti oblik majstorstva.",
-  "dn16:3.30.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja."
+  "dn16:3.30.1": "Kad neko, ne opažajući u sebi oblike, vidi spoljašnje oblike, žute, žute boje, žute spoljašnjosti, žutog sjaja.",
+  "dn16:3.30.2": "Baš kao što je kaṇikāra cvet žut, žute boje, žute spoljašnjosti, žutog sjaja. Ili kao što je tkanina iz Benaresa sa obe strane žuta, žute boje, žute spoljašnjosti, žutog sjaja."
 }
